# Innobasque_buscador

./: .env.example  .gitignore  buscador.py  docker-compose.yml  interpretar_filtros.py  pyproject.toml  system_prompt.txt  traductor.py  utils.py
create_tables/: create_empresas.sql  create_soluciones.sql  empresas.ipynb  insert_empresas.csv  insert_soluciones.csv  vectorizar.ipynb
init/: 01_init_vector_db.sql
