[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["WAC-JosebaMaiz <joseba.maiz@weareclickers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
psycopg2 = "^2.9.10"
openai = "^1.106.1"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
