[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["WAC-JosebaMaiz <joseba.maiz@weareclickers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
transformers = "^4.56.1"
lingua-language-detector = "^2.1.1"
sentencepiece = "^0.2.1"
torch = "^2.8.0"
sacremoses = "^0.1.1"
pandas = "^2.3.2"
psycopg2 = "^2.9.10"
openai = "^1.107.1"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
